--- a/hardware.html
+++ b/hardware.html
@@ -10,6 +10,7 @@
         <ul id="hardwarebar">
             <li> <a href="index.html">Home</a></li>
             <li> <a href="hardware.html"> Hardware</a> </li>
+            <li> <a href="InfoWebsite.html"> Musicians</a></li>
         </ul>
         <h1>Hardware</h1>
         <table>
