--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul id="navbar">
             <li> <a href="index.html">Home</a></li>
             <li> <a href="hardware.html"> Hardware</a> </li>
+            <li> <a href="InfoWebsite.html">Musicians </a></li>
         </ul>
 <h1>Welcome</h1>
 <h2>About Me</h2>
