--- a/InfoWebsite.html
+++ b/InfoWebsite.html
@@ -10,6 +10,7 @@
             <li> <a href="index.html">Home</a></li>
             <li> <a href="hardware.html"> Hardware</a> </li>
             <li> <a href="InfoWebsite.html">Musicians </a></li>
+            <li> <a href="calc.html">Calculator </a></li>
             </ul>
             
     <h1>2016 Music Artists</h1>
