--- a/hardware.html
+++ b/hardware.html
@@ -11,6 +11,7 @@
             <li> <a href="index.html">Home</a></li>
             <li> <a href="hardware.html"> Hardware</a> </li>
             <li> <a href="InfoWebsite.html"> Musicians</a></li>
+            <li> <a href="calc.html">Calculator </a></li>
         </ul>
         <h1>Hardware</h1>
         <table>
