--- a/InfoWebsite.html
+++ b/InfoWebsite.html
@@ -11,6 +11,7 @@
             <li> <a href="hardware.html"> Hardware</a> </li>
             <li> <a href="InfoWebsite.html">Musicians </a></li>
             <li> <a href="calc.html">Calculator </a></li>
+            <li> <a href="vidinium.html"> Vidinium</a></li>
             </ul>
             
     <h1>2016 Music Artists</h1>
