--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
         <title>Hardware </title>
     </head>
     <body>
-        <ul id="navbar">
+           <ul id="navbar">
             <li> <a href="index.html">Home</a></li>
             <li> <a href="hardware.html"> Hardware</a> </li>
             <li> <a href="InfoWebsite.html">Musicians </a></li>
             <li> <a href="calc.html">Calculator </a></li>
-        </ul>
+            <li> <a href="vidinium.html"> Vidinium</a></li>
+            </ul>
 <h1>Welcome</h1>
 <h2>About Me</h2>
-<h3>What school do you do to?</h3>
+<h3>What school do you go to?</h3>
 <p class="paragraphs">  Hello, my name is Kenneth. I live in Daly City, California. I am currently in the ninth grade and I go to school at Summit Shasta. I take Spanish, Math, History, Eniglish and Biology. I am in many of the clubs at school. I am in photography, ambassador, and service club.<br> <img class=images src=http://www.summitps.org/uploads/sumhome/summit_home.png></p>
 <h3>What is your favorite food and movie?</h3>
 <p  class="paragraphs">Let me tell you a couple things about me. I have so much kind of favorite foods, but if I had to choose one it would be Mexican food. I like Mexican food because there is so muchs flavors in one meal and all the flavors go well together. I like watching movies. My favorite kind of movies are comedy and action. My favorite movie or movie series is the Fast and Furious series.<br> 
