--- a/BasketballModel.html
+++ b/BasketballModel.html
@@ -10,6 +10,7 @@
             <li> <a href="InfoWebsite.html">Musicians </a></li>
             <li> <a href="calc.html">Calculator </a></li>
             <li> <a href="vidinium.html"> Vidinium</a></li>
+            <li> <a href="Randomizer.html"> Sandwich Maker</a></li>
             </ul>
 <h1>Basketball</h1>
 <img src=http://i0.wp.com/www.winnetkabullets.com/North_America_half_courtbw.jpg>
