--- a/hardware.html
+++ b/hardware.html
@@ -7,12 +7,13 @@
         
     </head>
     <body>
-           <ul id="navbar">
+                  <ul id="navbar">
             <li> <a href="index.html">Home</a></li>
             <li> <a href="hardware.html"> Hardware</a> </li>
             <li> <a href="InfoWebsite.html">Musicians </a></li>
             <li> <a href="calc.html">Calculator </a></li>
             <li> <a href="vidinium.html"> Vidinium</a></li>
+            <li> <a href="Randomizer.html"> Sandwich Maker</a></li>
             </ul>
         <h1>Hardware</h1>
         <table>
