--- a/vidinium.html
+++ b/vidinium.html
@@ -11,6 +11,7 @@
             <li> <a href="InfoWebsite.html">Musicians </a></li>
             <li> <a href="calc.html">Calculator </a></li>
             <li> <a href="vidinium.html"> Vidinium</a></li>
+            <li> <a href="Randomizer.html"> Sandwich Maker</a></li>
             </ul>
         <strong><h1>Vindinium Bots</h1></strong>
         <h2>What is Vindinium?</h2>
