--- a/Randomizer.html
+++ b/Randomizer.html
@@ -2,44 +2,35 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="Randomizer.css">
-        <title>Sandwich Generator</title>
+        <title>Band Maker</title>
     </head>
     <body>
-            <ul id="navbar">
+                    <ul id="navbar">
             <li> <a href="index.html">Home</a></li>
             <li> <a href="hardware.html"> Hardware</a> </li>
             <li> <a href="InfoWebsite.html">Musicians </a></li>
             <li> <a href="calc.html">Calculator </a></li>
             <li> <a href="vidinium.html"> Vidinium</a></li>
-            <li> <a href="Randomizer.html"> Sandwich Maker</a></li>
+            <li> <a href="Randomizer.html"> Band Maker</a></li>
+            <li> <a href="BasketballModel.html"> Basketball</a></li>
             </ul>
-    <h1> Sandwich Maker</h1>
-    <p>Are you having trouble deciding what you will eat for lunch? Well here is a website that you can use to help you decide what you will eat and what to put in that sandwich of yours. Here we can generate a list of ingredients for you to put in your sandwich. If you do not like anything in your list that we have generated, you can always click the generate button again to create a new list of ingredients.  </p>
-     <h2>
-    How many toppings do you want?    
-    </h2>
-    <div id='amounts'> 
-    <select id="dropdown">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-        <option value="6">6</option>
-        <option value="7">7</option>
-        <option value="8">8</option>
-        <option value="9">9</option>
-    </select>
-    </div>
-   
+    <h1> Band Maker</h1>
+
+
     <div id='display'></div> <p>
-        CLICK THE BUTTON TO GET YOUR TOPPINGS!
+
     </p>
-    <div id='buttonpic'>
-    <img style="width: 250px; height: 250px" src="http://vignette1.wikia.nocookie.net/animaljam/images/b/be/Stop-button.png/revision/latest?cb=20141009173238" id="redButton"/>
+<div id="redButton">
+    <img style="width: 250px; height: 250px" src="http://img1.wikia.nocookie.net/__cb20110710234758/random-ness/images/6/6b/Random_Button.png" id="redButton"/>
     </div>
-    <p1>
-        *If you get 1 or more of the same toppings, put more of that ingredient*
-    </p1>
+<div id="redButton">
+    <img style="width: 250px; height: 250px" src="http://img1.wikia.nocookie.net/__cb20110710234758/random-ness/images/6/6b/Random_Button.png" id="redButton"/>
+    </div>
+<div id="redButton">
+    <img style="width: 250px; height: 250px" src="http://img1.wikia.nocookie.net/__cb20110710234758/random-ness/images/6/6b/Random_Button.png" id="redButton"/>
+    </div>
+<div id="redButton">
+    <img style="width: 250px; height: 250px" src="http://img1.wikia.nocookie.net/__cb20110710234758/random-ness/images/6/6b/Random_Button.png" id="redButton"/>
+    </div>
     <script src="Randomizer.js"></script>
     </body>
