--- a/calc.html
+++ b/calc.html
@@ -5,13 +5,14 @@
 	<title>Calculator</title>
 </head>
 <body>
-        <ul id="navbar">
+                <ul id="navbar">
             <li> <a href="index.html">Home</a></li>
             <li> <a href="hardware.html"> Hardware</a> </li>
             <li> <a href="InfoWebsite.html">Musicians </a></li>
             <li> <a href="calc.html">Calculator </a></li>
             <li> <a href="vidinium.html"> Vidinium</a></li>
-            <li> <a href="Randomizer.html"> Sandwich Maker</a></li>
+            <li> <a href="Randomizer.html"> Band Maker</a></li>
+            <li> <a href="BasketballModel.html"> Basketball</a></li>
             </ul>
     <h1>Calculator</h1>
 <input type ="text" name="input1" style="width:50px;" id="input1">
