--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
         <title>Hardware </title>
     </head>
     <body>
-                  <ul id="navbar">
+        <ul id="navbar">
             <li> <a href="index.html">Home</a></li>
             <li> <a href="hardware.html"> Hardware</a> </li>
             <li> <a href="InfoWebsite.html">Musicians </a></li>
             <li> <a href="calc.html">Calculator </a></li>
             <li> <a href="vidinium.html"> Vidinium</a></li>
-            <li> <a href="Randomizer.html"> Sandwich Maker</a></li>
+            <li> <a href="Randomizer.html"> Band Maker</a></li>
+            <li> <a href="BasketballModel.html"> Basketball</a></li>
             </ul>
 <h1>Welcome</h1>
 <h2>About Me</h2>
